# HistogramEqualizationCUDA

./: .gitignore  CMakeLists.txt  histogram_after.txt  histogram_before.txt  histogram_cpu.cpp  histogram_cpu.hpp  histogram_gpu.cu  histogram_gpu.hpp  main.cu  plot_histograms.py  run_plot.sh
